--- a/app-crypt/mit-krb5/ChangeLog
+++ b/app-crypt/mit-krb5/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/mit-krb5
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.119 2006/06/25 11:35:21 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.120 2006/06/27 12:02:18 gmsoft Exp $
+
+  27 Jun 2006; Guy Martin <gmsoft@gentoo.org> mit-krb5-1.4.3-r1.ebuild:
+  Stable on hppa.
 
   25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   mit-krb5-1.4.3-r1.ebuild:
