--- a/net-wireless/kdebluetooth/ChangeLog
+++ b/net-wireless/kdebluetooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/kdebluetooth
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kdebluetooth/Attic/ChangeLog,v 1.46 2006/06/27 14:36:29 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/kdebluetooth/Attic/ChangeLog,v 1.47 2006/06/27 14:39:40 cryos Exp $
+
+  27 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org>
+  -kdebluetooth-1.0_beta1.ebuild, -kdebluetooth-1.0_beta1-r1.ebuild:
+  Pruned old versions.
 
   27 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org>
   kdebluetooth-1.0_beta1-r2.ebuild:
