--- a/sys-fs/mdadm/ChangeLog
+++ b/sys-fs/mdadm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/mdadm
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.34 2006/06/27 13:33:27 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/mdadm/ChangeLog,v 1.35 2006/06/27 16:28:12 corsair Exp $
+
+  27 Jun 2006; Markus Rothe <corsair@gentoo.org> mdadm-2.5-r1.ebuild:
+  Stable on ppc64; bug #138194
 
   27 Jun 2006; Guy Martin <gmsoft@gentoo.org> mdadm-2.5-r1.ebuild:
   Stable on hppa.
