--- a/media-plugins/vdr-xineliboutput/ChangeLog
+++ b/media-plugins/vdr-xineliboutput/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/vdr-xineliboutput
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xineliboutput/ChangeLog,v 1.2 2006/05/14 18:36:32 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xineliboutput/ChangeLog,v 1.3 2006/06/27 17:19:06 zzam Exp $
+
+*vdr-xineliboutput-0.99_rc5 (27 Jun 2006)
+
+  27 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  +vdr-xineliboutput-0.99_rc5.ebuild:
+  Version bumped. Now contains correct x11-depends.
 
 *vdr-xineliboutput-0.99_rc (14 May 2006)
 
