--- a/media-plugins/vdr-mplayer/ChangeLog
+++ b/media-plugins/vdr-mplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-mplayer
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.3 2006/06/18 21:38:35 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.4 2006/06/27 22:06:19 zzam Exp $
+
+  27 Jun 2006; Matthias Schwarzott <zzam@gentoo.org>
+  vdr-mplayer-0.9.14-r1.ebuild:
+  Added runtime-depend to sys-apps/eject.
 
 *vdr-mplayer-0.9.14-r1 (18 Jun 2006)
 
