--- a/media-plugins/xmms-jack/ChangeLog
+++ b/media-plugins/xmms-jack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/xmms-jack
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jack/Attic/ChangeLog,v 1.33 2006/06/27 22:13:45 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmms-jack/Attic/ChangeLog,v 1.34 2006/06/28 01:39:53 metalgod Exp $
+
+  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> xmms-jack-0.16.ebuild:
+  Stable on amd64. Bug #138227.
 
   27 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> xmms-jack-0.16.ebuild:
   Stable on sparc wrt #138227
