--- a/sys-libs/cracklib/ChangeLog
+++ b/sys-libs/cracklib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/cracklib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.93 2006/06/27 23:24:28 tcort Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.94 2006/06/28 02:02:55 metalgod Exp $
+
+  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> cracklib-2.8.9.ebuild:
+  Stable on amd64. Bug #138146.
 
   27 Jun 2006; Thomas Cort <tcort@gentoo.org> cracklib-2.8.9.ebuild:
   Stable on alpha wrt Bug #138146.
