--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.34 2006/06/06 16:54:39 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.35 2006/06/28 11:47:22 caleb Exp $
+
+  28 Jun 2006; Caleb Tennis <caleb@gentoo.org> -activesupport-1.2.5.ebuild,
+  -activesupport-1.3.0.ebuild:
+  Remove old versions
 
   06 Jun 2006; Simon Stelling <blubb@gentoo.org> activesupport-1.3.1.ebuild:
   stable on amd64
