--- a/dev-ruby/actionpack/ChangeLog
+++ b/dev-ruby/actionpack/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/actionpack
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.33 2006/06/06 16:54:18 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/actionpack/ChangeLog,v 1.34 2006/06/28 11:52:06 caleb Exp $
+
+*actionpack-1.12.2 (28 Jun 2006)
+
+  28 Jun 2006; Caleb Tennis <caleb@gentoo.org> -actionpack-1.11.2.ebuild,
+  -actionpack-1.12.0.ebuild, +actionpack-1.12.2.ebuild:
+  version bump and remove old version
 
   06 Jun 2006; Simon Stelling <blubb@gentoo.org> actionpack-1.12.1.ebuild:
   stable on amd64
