--- a/x11-terms/mrxvt/ChangeLog
+++ b/x11-terms/mrxvt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/mrxvt
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/mrxvt/ChangeLog,v 1.34 2006/04/16 22:33:53 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/mrxvt/ChangeLog,v 1.35 2006/06/28 12:15:30 nelchael Exp $
+
+*mrxvt-0.5.1 (28 Jun 2006)
+
+  28 Jun 2006; Krzysiek Pawlik <nelchael@gentoo.org> +mrxvt-0.5.1.ebuild:
+  Version bump, see bug #138144.
 
   16 Apr 2006; Michael Hanselmann <hansmi@gentoo.org> mrxvt-0.4.2.ebuild:
   Stable on ppc.
