--- a/app-crypt/gnupg/ChangeLog
+++ b/app-crypt/gnupg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.205 2006/06/28 18:37:59 kingtaco Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.206 2006/06/28 19:18:03 killerfox Exp $
+
+  28 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> gnupg-1.4.4.ebuild:
+  Stable on hppa. See bug #137622.
 
   28 Jun 2006; Mike Doty <kingtaco@gentoo.org> gnupg-1.4.4.ebuild:
   amd64 stable
