--- a/media-libs/pdflib/ChangeLog
+++ b/media-libs/pdflib/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/pdflib
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pdflib/Attic/ChangeLog,v 1.57 2006/06/26 15:01:48 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/pdflib/Attic/ChangeLog,v 1.58 2006/06/28 23:32:56 chtekk Exp $
+
+  28 Jun 2006; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
+  -pdflib-5.0.2.ebuild, -pdflib-5.0.4_p1.ebuild, pdflib-5.0.4_p1-r1.ebuild,
+  pdflib-6.0.1.ebuild, pdflib-6.0.3.ebuild:
+  Fix bug #87004 (thanks to Ryan Hill) on all PDFlib packages, remove old,
+  unneeded versions, and take it under the PHP herds wing.
 
 *pdflib-6.0.3 (26 Jun 2006)
 
