--- a/dev-util/strace/ChangeLog
+++ b/dev-util/strace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/strace
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/strace/ChangeLog,v 1.87 2006/06/26 00:51:12 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/strace/ChangeLog,v 1.88 2006/06/29 01:55:02 yoswink Exp $
+
+  29 Jun 2006; Jose Luis Rivero <yoswink@gentoo.org> strace-4.5.14.ebuild:
+  Stable on alpha wrt bug #137914
 
   26 Jun 2006; Andrej Kacian <ticho@gentoo.org> strace-4.5.14.ebuild:
   Stable on x86, bug #137914.
