--- a/games-strategy/glest/ChangeLog
+++ b/games-strategy/glest/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/glest
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/glest/ChangeLog,v 1.10 2006/04/14 22:05:06 tupone Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/glest/ChangeLog,v 1.11 2006/06/29 13:29:42 wolf31o2 Exp $
+
+  29 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> glest-2.0.0.ebuild:
+  Remove version information from openal dependency for bug #138392.
 
 *glest-2.0.0 (14 Apr 2006)
 
