--- a/games-strategy/attal/ChangeLog
+++ b/games-strategy/attal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/attal
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/attal/ChangeLog,v 1.17 2006/05/30 20:42:08 tupone Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/attal/ChangeLog,v 1.18 2006/06/29 13:39:04 wolf31o2 Exp $
+
+  29 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> attal-0.9.3.ebuild,
+  attal-0.9.4.ebuild:
+  Fixed dependencies and closing bug #138461.
 
   30 May 2006; <Tupone@gentoo.org> +files/attal-0.9.4-gcc41.patch,
   attal-0.9.4.ebuild:
