--- a/dev-perl/XML-RegExp/ChangeLog
+++ b/dev-perl/XML-RegExp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-RegExp
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-RegExp/ChangeLog,v 1.17 2006/06/18 09:15:41 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-RegExp/ChangeLog,v 1.18 2006/06/29 16:57:49 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  XML-RegExp-0.03-r1.ebuild:
+  Stable on hppa
 
   18 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
   XML-RegExp-0.03-r1.ebuild:
