--- a/dev-perl/libwww-perl/ChangeLog
+++ b/dev-perl/libwww-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/libwww-perl
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.70 2006/06/12 15:41:33 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.71 2006/06/29 16:58:47 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  libwww-perl-5.805.ebuild:
+  Stable on hppa
 
   12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   libwww-perl-5.805.ebuild:
