--- a/dev-perl/libxml-perl/ChangeLog
+++ b/dev-perl/libxml-perl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/libxml-perl
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libxml-perl/ChangeLog,v 1.25 2006/06/18 09:15:04 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libxml-perl/ChangeLog,v 1.26 2006/06/29 16:57:00 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  libxml-perl-0.08.ebuild:
+  Stable on hppa
 
   18 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
   libxml-perl-0.08.ebuild:
