--- a/dev-perl/Class-Spiffy/ChangeLog
+++ b/dev-perl/Class-Spiffy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-Spiffy
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-Spiffy/ChangeLog,v 1.7 2006/06/11 23:53:00 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-Spiffy/ChangeLog,v 1.8 2006/06/29 18:04:59 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  Class-Spiffy-0.15.ebuild:
+  Stable on hppa
 
   11 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   Class-Spiffy-0.15.ebuild:
