--- a/dev-perl/Proc-ProcessTable/ChangeLog
+++ b/dev-perl/Proc-ProcessTable/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Proc-ProcessTable
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Proc-ProcessTable/ChangeLog,v 1.18 2006/06/12 16:13:29 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Proc-ProcessTable/ChangeLog,v 1.19 2006/06/29 18:49:51 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  Proc-ProcessTable-0.40.ebuild:
+  Stable on hppa
 
   12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   Proc-ProcessTable-0.40.ebuild:
