--- a/dev-perl/String-ShellQuote/ChangeLog
+++ b/dev-perl/String-ShellQuote/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/String-ShellQuote
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/String-ShellQuote/ChangeLog,v 1.19 2006/06/12 16:40:05 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/String-ShellQuote/ChangeLog,v 1.20 2006/06/29 18:55:14 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  String-ShellQuote-1.03.ebuild:
+  Stable on hppa
 
   12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   String-ShellQuote-1.03.ebuild:
