--- a/dev-perl/set-scalar/ChangeLog
+++ b/dev-perl/set-scalar/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/set-scalar
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.17 2006/06/12 16:14:49 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.18 2006/06/29 19:31:23 gustavoz Exp $
+
+  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  set-scalar-1.20.ebuild:
+  Stable on hppa
 
   12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   set-scalar-1.20.ebuild:
