--- a/dev-perl/Net-Amazon/ChangeLog
+++ b/dev-perl/Net-Amazon/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-Amazon
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-Amazon/ChangeLog,v 1.3 2006/06/29 06:32:52 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-Amazon/ChangeLog,v 1.4 2006/06/30 00:33:39 mcummings Exp $
+
+  30 Jun 2006; Michael Cummings <mcummings@gentoo.org>
+  Net-Amazon-0.35.ebuild:
+  Bug 138436 - keywording ~amd64
 
   29 Jun 2006; Christian Hartmann <ian@gentoo.org> metadata.xml,
   Net-Amazon-0.35.ebuild:
