--- a/app-crypt/gnupg/ChangeLog
+++ b/app-crypt/gnupg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.207 2006/06/29 22:25:56 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.208 2006/06/30 01:01:56 robbat2 Exp $
+
+  30 Jun 2006; Robin H. Johnson <robbat2@gentoo.org> gnupg-1.9.21.ebuild:
+  Fix failure with old gcc versions.
 
 *gnupg-1.9.21 (29 Jun 2006)
 
