--- a/kde-misc/yakuake/ChangeLog
+++ b/kde-misc/yakuake/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/yakuake
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.7 2006/06/05 16:23:30 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/yakuake/ChangeLog,v 1.8 2006/06/30 04:14:08 tsunam Exp $
+
+  30 Jun 2006; Joshua Jackson <tsunam@gentoo.org> yakuake-2.7.5.ebuild:
+  stable x86; bug #135142
 
   05 Jun 2006; <nixnut@gentoo.org> ChangeLog:
   Stable on ppc; bug #135142
