--- a/x11-proto/kbproto/ChangeLog
+++ b/x11-proto/kbproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/kbproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/kbproto/ChangeLog,v 1.19 2006/03/31 19:28:04 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/kbproto/ChangeLog,v 1.20 2006/06/30 04:47:36 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; kbproto-1.0.2.ebuild:
+  x86 stable.
 
   31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> kbproto-1.0.2.ebuild:
   Add ~x86-fbsd keyword.
