--- a/x11-libs/libXrender/ChangeLog
+++ b/x11-libs/libXrender/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXrender
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXrender/ChangeLog,v 1.22 2006/04/29 04:52:01 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXrender/ChangeLog,v 1.23 2006/06/30 05:07:28 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  libXrender-0.9.1.ebuild:
+  x86 stable.
 
 *libXrender-0.9.1 (29 Apr 2006)
 
