--- a/media-fonts/encodings/ChangeLog
+++ b/media-fonts/encodings/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/encodings
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/encodings/ChangeLog,v 1.18 2006/06/06 15:48:14 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/encodings/ChangeLog,v 1.19 2006/06/30 05:11:33 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  encodings-1.0.0.ebuild:
+  x86 stable.
 
   06 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   files/digest-encodings-1.0.0, Manifest:
