--- a/x11-apps/mkfontscale/ChangeLog
+++ b/x11-apps/mkfontscale/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/mkfontscale
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.19 2006/03/31 19:54:23 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.20 2006/06/30 05:09:40 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  mkfontscale-1.0.1.ebuild:
+  x86 stable.
 
   31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
   mkfontscale-1.0.1.ebuild:
