--- a/x11-apps/rgb/ChangeLog
+++ b/x11-apps/rgb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/rgb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rgb/ChangeLog,v 1.26 2006/05/20 07:28:31 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rgb/ChangeLog,v 1.27 2006/06/30 05:18:58 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; rgb-1.0.1.ebuild:
+  x86 stable.
 
   20 May 2006; Donnie Berkholz <spyderous@gentoo.org>; rgb-1.0.1.ebuild:
   Remove RESTRICT=mirror.
