--- a/x11-apps/xauth/ChangeLog
+++ b/x11-apps/xauth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xauth
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.21 2006/03/31 20:03:35 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.22 2006/06/30 05:19:32 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; xauth-1.0.1.ebuild:
+  x86 stable.
 
   31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> xauth-1.0.1.ebuild:
   Add ~x86-fbsd keyword.
