--- a/x11-apps/xkbcomp/ChangeLog
+++ b/x11-apps/xkbcomp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xkbcomp
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.24 2006/04/29 16:42:57 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.25 2006/06/30 05:16:35 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; xkbcomp-1.0.2.ebuild:
+  x86 stable.
 
 *xkbcomp-1.0.2 (29 Apr 2006)
 
