--- a/x11-proto/dmxproto/ChangeLog
+++ b/x11-proto/dmxproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/dmxproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.19 2006/04/28 14:43:12 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/dmxproto/ChangeLog,v 1.20 2006/06/30 05:32:38 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  dmxproto-2.2.2.ebuild:
+  x86 stable.
 
   28 Apr 2006; Marien Zwart <marienz@gentoo.org>
   files/digest-dmxproto-2.2.2, Manifest:
