--- a/x11-proto/xf86miscproto/ChangeLog
+++ b/x11-proto/xf86miscproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86miscproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86miscproto/ChangeLog,v 1.17 2006/04/28 00:22:16 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86miscproto/ChangeLog,v 1.18 2006/06/30 05:29:45 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86miscproto-0.9.2.ebuild:
+  x86 stable.
 
   28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
   Fixing SHA256 digest, pass four
