--- a/x11-libs/libXres/ChangeLog
+++ b/x11-libs/libXres/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXres
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.22 2006/04/29 04:50:18 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.23 2006/06/30 05:35:41 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXres-1.0.1.ebuild:
+  x86 stable.
 
 *libXres-1.0.1 (29 Apr 2006)
 
