--- a/x11-libs/libXxf86misc/ChangeLog
+++ b/x11-libs/libXxf86misc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXxf86misc
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXxf86misc/ChangeLog,v 1.21 2006/04/29 04:36:22 joshuabaergen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXxf86misc/ChangeLog,v 1.22 2006/06/30 05:30:03 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  libXxf86misc-1.0.1.ebuild:
+  x86 stable.
 
 *libXxf86misc-1.0.1 (29 Apr 2006)
 
