--- a/x11-libs/liblbxutil/ChangeLog
+++ b/x11-libs/liblbxutil/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/liblbxutil
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/liblbxutil/Attic/ChangeLog,v 1.22 2006/05/20 07:32:15 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/liblbxutil/Attic/ChangeLog,v 1.23 2006/06/30 05:38:32 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  liblbxutil-1.0.1.ebuild:
+  x86 stable.
 
 *liblbxutil-1.0.1 (20 May 2006)
 
