--- a/x11-proto/evieext/ChangeLog
+++ b/x11-proto/evieext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/evieext
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.19 2006/04/28 14:44:32 marienz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.20 2006/06/30 05:44:18 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; evieext-1.0.2.ebuild:
+  x86 stable.
 
   28 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-evieext-1.0.2,
   Manifest:
