--- a/x11-proto/fixesproto/ChangeLog
+++ b/x11-proto/fixesproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/fixesproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fixesproto/ChangeLog,v 1.16 2006/03/31 19:45:58 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/fixesproto/ChangeLog,v 1.17 2006/06/30 05:41:58 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  fixesproto-4.0.ebuild:
+  x86 stable.
 
   31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> fixesproto-4.0.ebuild:
   Add ~x86-fbsd keyword.
