--- a/x11-proto/xf86driproto/ChangeLog
+++ b/x11-proto/xf86driproto/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86driproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.14 2006/04/03 00:57:27 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.15 2006/06/30 05:46:16 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  xf86driproto-2.0.3.ebuild:
+  x86 stable.
 
   03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
   xf86driproto-2.0.3.ebuild:
