--- a/x11-proto/glproto/ChangeLog
+++ b/x11-proto/glproto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/glproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.28 2006/05/13 09:28:11 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-proto/cvs-repo/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.29 2006/06/30 06:18:14 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; glproto-1.4.7.ebuild:
+  x86 stable.
 
 *glproto-1.4.7 (13 May 2006)
 
