--- a/x11-misc/gccmakedep/ChangeLog
+++ b/x11-misc/gccmakedep/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/gccmakedep
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gccmakedep/ChangeLog,v 1.13 2006/05/20 07:35:50 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/gccmakedep/ChangeLog,v 1.14 2006/06/30 06:32:58 spyderous Exp $
+
+  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
+  gccmakedep-1.0.2.ebuild:
+  x86 stable.
 
 *gccmakedep-1.0.2 (20 May 2006)
 
